# src/models/validate.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"errors"
 	"fmt"
 	"reflect"
 	"strings"
@@ -10,6 +9,7 @@ import (
 	"github.com/go-playground/locales/id"
 	ut "github.com/go-playground/universal-translator"
 	"github.com/go-playground/validator/v10"
+	"github.com/gofiber/fiber/v2"
 
 	en_translations "github.com/go-playground/validator/v10/translations/en"
 	id_translations "github.com/go-playground/validator/v10/translations/id"
@@ -22,23 +22,55 @@ var (
 	trans    *ut.Translator
 )
 
-func getJSONField(data interface{}, snp string, fieldname string) error {
-	if !strings.Contains(snp, fieldname) {
-		return nil
+// func getJSONField(data interface{}, snp string, fieldname string) error {
+// 	if !strings.Contains(snp, fieldname) {
+// 		return nil
+// 	}
+
+// 	fieldArr := strings.Split(snp, ".")
+// 	// fmt.Println(fieldArr)
+
+// 	val := reflect.ValueOf(data)
+
+// 	for i := 0; i < val.Type().NumField(); i++ {
+// 		t := val.Type().Field(i)
+
+// 		fieldName := t.Name
+// 		// fmt.Println(fieldName)
+// 		// fmt.Println(fieldArr[1])
+// 		if fieldArr[1] == fieldName {
+// 			if jsonTag := t.Tag.Get("json"); jsonTag != "" && jsonTag != "-" {
+// 				// check for possible comma as in "...,omitempty"
+// 				var commaIdx int
+// 				if commaIdx = strings.Index(jsonTag, ","); commaIdx < 0 {
+// 					commaIdx = len(jsonTag)
+// 				}
+// 				fieldName = jsonTag[:commaIdx]
+// 			}
+// 			return errors.New(fieldName)
+// 		}
+
+// 		return nil
+// 	}
+
+// 	return nil
+// }
+
+func getJSONFieldName(s interface{}, snp string) (fieldname string) {
+	// fmt.Println("tag: ", tag)
+	// fmt.Println("snp: ", snp)
+	rt := reflect.TypeOf(s)
+	if rt.Kind() != reflect.Struct {
+		panic("bad type")
 	}
 
 	fieldArr := strings.Split(snp, ".")
-	// fmt.Println(fieldArr)
 
-	val := reflect.ValueOf(data)
-
-	for i := 0; i < val.Type().NumField(); i++ {
-		t := val.Type().Field(i)
-
-		fieldName := t.Name
-		// fmt.Println(fieldArr[1])
+	for i := 0; i < rt.NumField(); i++ {
+		f := rt.Field(i)
+		fieldName := f.Name
 		if fieldArr[1] == fieldName {
-			if jsonTag := t.Tag.Get("json"); jsonTag != "" && jsonTag != "-" {
+			if jsonTag := f.Tag.Get("json"); jsonTag != "" && jsonTag != "-" {
 				// check for possible comma as in "...,omitempty"
 				var commaIdx int
 				if commaIdx = strings.Index(jsonTag, ","); commaIdx < 0 {
@@ -46,21 +78,28 @@ func getJSONField(data interface{}, snp string, fieldname string) error {
 				}
 				fieldName = jsonTag[:commaIdx]
 			}
-			return errors.New(fieldName)
+			return fieldName
 		}
-
-		return nil
 	}
-
-	return nil
+	return ""
 }
 
-func ValidateStruct(data interface{}) []*ErrorDetailsResponse {
+func ValidateStruct(data interface{}) ResponseHTTP {
 	validate = validator.New()
 
+	// register function to get tag name from json tags.
+	// validate.RegisterTagNameFunc(func(fld reflect.StructField) string {
+	// 	name := strings.SplitN(fld.Tag.Get("json"), ",", 2)[0]
+	// 	if name == "-" {
+	// 		return ""
+	// 	}
+	// 	return name
+	// })
+
 	en := en.New()
-	id := id.New()
-	uni = ut.New(en, en, id)
+	uni = ut.New(en, en)
+	// id := id.New()
+	// uni = ut.New(id, id)
 
 	// this is usually know or extracted from http 'Accept-Language' header
 	// also see uni.FindTranslator(...)
@@ -68,7 +107,7 @@ func ValidateStruct(data interface{}) []*ErrorDetailsResponse {
 	// trans, _ := uni.GetTranslator("id")
 
 	en_translations.RegisterDefaultTranslations(validate, trans)
-	id_translations.RegisterDefaultTranslations(validate, trans)
+	// id_translations.RegisterDefaultTranslations(validate, trans)
 
 	var errors []*ErrorDetailsResponse
 	err := validate.Struct(data)
@@ -78,15 +117,10 @@ func ValidateStruct(data interface{}) []*ErrorDetailsResponse {
 			var element ErrorDetailsResponse
 			translatedErr := fmt.Errorf(err.Translate(trans))
 			element.Field = err.StructNamespace()
-			// log.Println(err.StructNamespace())
 			element.Tag = err.Tag()
-			// element.Value = err.Param()
 			element.Message = translatedErr.Error()
 
-			errJson := getJSONField(data, err.StructNamespace(), err.Field())
-			if errJson != nil {
-				element.Field = errJson.Error()
-			}
+			element.Field = getJSONFieldName(data, err.StructNamespace())
 
 			if err.Tag() == "e164" {
 				element.Message = fmt.Sprintf("%s %s", translatedErr.Error(), "i.e. +6281234567890 or +628 123 4567 890")
@@ -95,7 +129,11 @@ func ValidateStruct(data interface{}) []*ErrorDetailsResponse {
 		}
 	}
 
-	return errors
+	return ResponseHTTP{
+		Code:    fiber.StatusUnprocessableEntity,
+		Message: fiber.ErrUnprocessableEntity.Message,
+		Errors:  errors,
+	}
 }
 
 func ValidatePhoneNumber(phone_number string) []*ErrorDetailsResponse {
@@ -123,7 +161,8 @@ func ValidatePhoneNumber(phone_number string) []*ErrorDetailsResponse {
 	err := validate.Struct(s)
 
 	if err != nil {
-		for _, err := range err.(validator.ValidationErrors) {
+		for idx, err := range err.(validator.ValidationErrors) {
+			print(idx)
 			var element ErrorDetailsResponse
 			translatedErr := fmt.Errorf(err.Translate(trans))
 			element.Field = err.StructNamespace()
